// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Renders Correctly 1`] = `
<button
  className={undefined}
  onClick={[Function]}
  onKeyPress={[Function]}
>
  Execute
</button>
`;

exports[`Button Renders Passed Text Correctly 1`] = `
<button
  className={undefined}
  onClick={[Function]}
  onKeyPress={[Function]}
>
  Submit
</button>
`;
